Error in dashboard chart.js

--- a/src/app/main/pages/andon/dashboard/dashboard.component.html
+++ b/src/app/main/pages/andon/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
             </mat-form-field>    
         </div>      
     </div>
-    <div class="body-container">
+    <div class="body-container" *ngIf="andon$ | async">
         <div class="container1">
             <div class="container1__problem">
                 <h1 class="container1__problem--title" >
@@ -81,116 +81,18 @@
                 <h1 class="container2__taller--title">
                     Reporte por taller
                 </h1>
-                <div class="container2__taller--cards">
-                    <div class="container2__taller--cards-card" (click)="reports()">
+                <div class="container2__taller--cards"  > 
+                    <div class="container2__taller--cards-card" (click)="reports(item)" *ngFor="let item of groupByWorkShop">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
                             <p class="container2__taller--cards-name">
-                            nombre de taller
+                             {{item.workShop}}
                             </p>  
                         </div>
-                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
-                    </div>
-                    <div class="container2__taller--cards-card" (click)="reports()">
-                        <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
-                            <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p class="container2__taller--cards-name">
-                            nombre de taller
-                            </p>  
-                        </div>
-                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
-                    </div>
-                    <div class="container2__taller--cards-card" (click)="reports()">
-                        <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
-                            <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p class="container2__taller--cards-name">
-                            nombre de taller
-                            </p>  
-                        </div>
-                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
-                    </div>
-                    <div class="container2__taller--cards-card" (click)="reports()">
-                        <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
-                            <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p class="container2__taller--cards-name">
-                            nombre de taller
-                            </p>  
-                        </div>
-                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
-                    </div>
-                    <div class="container2__taller--cards-card" (click)="reports()">
-                        <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
-                            <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p class="container2__taller--cards-name">
-                            nombre de taller
-                            </p>  
-                        </div>
-                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
-                    </div>
-                    <div class="container2__taller--cards-card" (click)="reports()">
-                        <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
-                            <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p class="container2__taller--cards-name">
-                            nombre de taller
-                            </p>  
-                        </div>
-                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
-                    </div>
-                    <div class="container2__taller--cards-card" (click)="reports()">
-                        <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
-                            <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p class="container2__taller--cards-name">
-                            nombre de taller
-                            </p>  
-                        </div>
-                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
-                    </div>
-                    <div class="container2__taller--cards-card" (click)="reports()">
-                        <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
-                            <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p class="container2__taller--cards-name">
-                            nombre de taller
-                            </p>  
-                        </div>
-                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
-                    </div>
-                    <div class="container2__taller--cards-card" (click)="reports()">
-                        <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
-                            <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p class="container2__taller--cards-name">
-                            nombre de taller
-                            </p>  
-                        </div>
-                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
-                    </div>
-                    <div class="container2__taller--cards-card" (click)="reports()">
-                        <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
-                            <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p class="container2__taller--cards-name">
-                            nombre de taller
-                            </p>  
-                        </div>
-                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
-                    </div>
-                    <div class="container2__taller--cards-card" (click)="reports()">
-                        <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
-                            <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p class="container2__taller--cards-name">
-                            nombre de taller
-                            </p>  
-                        </div>
-                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
-                    </div>
-                    <div class="container2__taller--cards-card" (click)="reports()">
-                        <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
-                            <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p class="container2__taller--cards-name">
-                            nombre de taller
-                            </p>  
-                        </div>
-                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
-                    </div>
-                    
+                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">
+                            {{item.quantity}}
+                        </h1>
+                    </div>                    
                     
                 </div>
             </div>
