--- a/src/app/main/pages/andon/record/record.component.html
+++ b/src/app/main/pages/andon/record/record.component.html
@@ -120,7 +120,7 @@
         
     </div>
     <div class="footer-container">
-      <button mat-button (click)="download()" 
+      <button mat-button (click)="downloadXls()" 
       class="footer-container__download">
         DESCARGAR
       </button>
