--- a/src/app/main/pages/andon/reports/reports.component.html
+++ b/src/app/main/pages/andon/reports/reports.component.html
@@ -11,7 +11,7 @@
               <mat-icon>search</mat-icon>
             </button>
             <form [formGroup]="searchForm" style="text-align: center;margin-top:10px ;">
-              <input matInput placeholder="Buscar" name="search" autocomplete="off" class="header-container__search--input" formControlName="search" />
+              <input  placeholder="Buscar" name="search" autocomplete="off" class="header-container__search--input" formControlName="search" />
             </form>
         </div>       
     </div>
