--- a/src/app/main/pages/andon/record/record.component.html
+++ b/src/app/main/pages/andon/record/record.component.html
@@ -60,8 +60,13 @@
         
               <ng-container matColumnDef="atentionTime">
                 <th mat-header-cell *matHeaderCellDef class="table__cell theader">Tiempo Atencion</th>
-                <td mat-cell *matCellDef="let element" class="table__cell">{{(element.atentionTime.seconds * 1000) | date :
-                  'dd/MM/yy hh:mm:ss'}} 
+                <td mat-cell *matCellDef="let element" class="table__cell">      
+                  {{element.atentionTime ?
+                    ( element.atentionTime.days +'/'+
+                      element.atentionTime.hours +':'+
+                      element.atentionTime.minutes +':'+
+                      element.atentionTime.seconds 
+                      ) : '---'}}
                 </td>
               </ng-container>
         
