--- a/src/app/main/pages/andon/reports/dialogs/details-dialog/details-dialog.component.html
+++ b/src/app/main/pages/andon/reports/dialogs/details-dialog/details-dialog.component.html
@@ -17,7 +17,12 @@
         <h1 style="color:#828282;">{{data.name}}</h1>
         <div style="display: flex;margin-top: 10px;">
             <div style="background:#FF2D2D; height: 20px; width: 20px; border-radius: 10px;margin-right: 15px;"></div>
-            <span style="font-weight: bold;color: black;">{{(data.reportDate['seconds'] * 1000) | date:'h:mm:ss'}}</span>
+            <span style="font-weight: bold;color: black;">
+                {{data.atentionTime?.days | number : '2.'}} /
+                {{data.atentionTime?.hours | number : '2.'}} :
+                {{data.atentionTime?.minutes | number : '2.'}} :
+                {{data.atentionTime?.seconds | number : '2.'}}
+            </span>
         </div>
     </div>
 
