--- a/src/app/main/pages/andon/reports/reports.component.html
+++ b/src/app/main/pages/andon/reports/reports.component.html
@@ -46,7 +46,12 @@
             <div class="cards__body">
                 <div class="cards__body--round">
                 </div> 
-                <h3 class="cards__body--timer"> {{(item.reportDate['seconds'] * 1000) | date:'h:mm:ss'}}</h3>
+                <h3 class="cards__body--timer"> 
+                  {{item.atentionTime?.days | number : '2.'}} /
+                  {{item.atentionTime?.hours | number : '2.'}} :
+                  {{item.atentionTime?.minutes | number : '2.'}} :
+                  {{item.atentionTime?.seconds | number : '2.'}}
+                </h3>
                 <button class="cards__body--supplies" >{{item.problemType}}</button>              
                 <button class="cards__body--return" (click)="returnDialog(item)">RETOMAR</button>       
             </div>
