:rocket: Deploy restore data - Evaluations results

--- a/src/app/main/pages/evaluations/evaluations-settings/evaluations-settings.component.html
+++ b/src/app/main/pages/evaluations/evaluations-settings/evaluations-settings.component.html
@@ -12,12 +12,15 @@
                         <span>
                             Lista de correos
                         </span>
-                        <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".xls,.xlsx" id="fileInput2">
-                        <button aria-label="add" mat-button class="container-settings__btn-add" accept=".xls,.xlsx" (click)="fileInput2.click()">
+                        <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)"
+                            accept=".xls,.xlsx" id="fileInput2">
+                        <button aria-label="add" mat-button class="container-settings__btn-add" accept=".xls,.xlsx"
+                            (click)="fileInput2.click()">
                             <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
                             SUBIR ARCHIVO
                         </button>
-                        <button type="file" aria-label="saveDataList" mat-button class="container-settings__btn-save" (click)="saveDataList()">
+                        <button type="file" aria-label="saveDataList" mat-button class="container-settings__btn-save"
+                            (click)="saveDataList()">
                             GUARDAR
                         </button>
                     </mat-card-title>
@@ -56,7 +59,8 @@
 
                             <ng-container matColumnDef="userName">
                                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Usuario windows </th>
-                                <td mat-cell *matCellDef="let element" align="center"> {{element.userName | lowercase}} </td>
+                                <td mat-cell *matCellDef="let element" align="center"> {{element.userName | lowercase}}
+                                </td>
                             </ng-container>
 
                             <ng-container matColumnDef="boss">
@@ -76,7 +80,7 @@
                                 <td class="mat-cell" colspan="4">No hay ningun dato cargado</td>
                             </tr>
                         </table>
-                        <mat-paginator #settingsPaginator [pageSizeOptions]="[5,10,15]"></mat-paginator>
+                        <mat-paginator #settingsPaginator [pageSizeOptions]="[20,30,40]"></mat-paginator>
                     </div>
                     <mat-card class="mat-elevation-z0" style="margin-left: -10px;margin-top: 10px;">
                         <mat-card-header>
@@ -84,7 +88,8 @@
                                 <span>
                                     Lista de difusión
                                 </span>
-                                <button type="button" aria-label="saveDataDifusion" mat-button class="container-settings__btn-save" (click)="saveDataNotify()">
+                                <button type="button" aria-label="saveDataDifusion" mat-button
+                                    class="container-settings__btn-save" (click)="saveDataNotify()">
                                     GUARDAR
                                 </button>
                             </mat-card-title>
@@ -94,12 +99,16 @@
                         <mat-card-header class="container-expansion1__content-card--header">
                             <mat-form-field>
                                 <mat-label>Escribir</mat-label>
-                                <input type="email" matInput placeholder="Escribir" [formControl]="listNotifyFormControl" (keyup.enter)="addDeleteListNotify('add')" [errorStateMatcher]="matcher" autocomplete="off">
-                                <button mat-button *ngIf="listNotifyFormControl.value" matSuffix mat-icon-button aria-label="clearMail" (click)="listNotifyFormControl.reset()">
+                                <input type="email" matInput placeholder="Escribir"
+                                    [formControl]="listNotifyFormControl" (keyup.enter)="addDeleteListNotify('add')"
+                                    [errorStateMatcher]="matcher" autocomplete="off">
+                                <button mat-button *ngIf="listNotifyFormControl.value" matSuffix mat-icon-button
+                                    aria-label="clearMail" (click)="listNotifyFormControl.reset()">
                                     <mat-icon>close</mat-icon>
                                 </button>
                                 <mat-hint>Presione ENTER para agregar</mat-hint>
-                                 <mat-error *ngIf="listNotifyFormControl.hasError('email') && !listNotifyFormControl.hasError('required')">
+                                <mat-error
+                                    *ngIf="listNotifyFormControl.hasError('email') && !listNotifyFormControl.hasError('required')">
                                     Por favor ingrese un correo valido
                                 </mat-error>
                                 <mat-error *ngIf="listNotifyFormControl.hasError('required')">
@@ -112,7 +121,8 @@
                                 <div class="item-list">
                                     <span>{{notify.email}}</span>
                                     <span>
-                                        <button mat-icon-button color="primary" aria-label="deletelistNotify" (click)="addDeleteListNotify('delete',i)">
+                                        <button mat-icon-button color="primary" aria-label="deletelistNotify"
+                                            (click)="addDeleteListNotify('delete',i)">
                                             <mat-icon style="color: #828282">delete</mat-icon>
                                         </button>
                                     </span>
@@ -124,57 +134,116 @@
             </mat-card>
         </mat-expansion-panel>
         <div style="margin-top: 30px;"></div>
-        <mat-expansion-panel class="container-settings__color-expantion" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+        <mat-expansion-panel class="container-settings__color-expantion" (opened)="panelOpenState = true"
+            (closed)="panelOpenState = false">
             <mat-expansion-panel-header style="height: 58px;">
                 <mat-panel-title class="container-settings__header-title">
                     Lista desplegables
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <div style="border: 10px;"></div>
-            <mat-card class="mat-elevation-z0">
-                <mat-card-content>
-                    <mat-card class="mat-elevation-z0" style="margin-left: -10px;margin-top: 10px;">
-                        <mat-card-header>
-                            <mat-card-title>
-                                <span>
-                                    Tipo de resultado
-                                </span>
-                                <button type="button" aria-label="saveDataDifusion" mat-button class="container-settings__btn-save" (click)="saveDataResult()">
-                                    GUARDAR
-                                </button>
-                            </mat-card-title>
-                        </mat-card-header>
-                    </mat-card>
-                    <mat-card class="mat-elevation-z0 container-expansion1__content-card">
-                        <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
-                        <mat-card-header class="container-expansion1__content-card--header">
-                            <mat-form-field>
-                                <mat-label>Escribir</mat-label>
-                                <input type="text" matInput placeholder="Escribir" [formControl]="listResultFormControl" (keyup.enter)="addDeleteListResult('add')" [errorStateMatcher]="matcher" autocomplete="off">
-                                <button mat-button *ngIf="listResultFormControl.value" matSuffix mat-icon-button aria-label="clearResult" (click)="listResultFormControl.reset()">
-                                    <mat-icon>close</mat-icon>
-                                </button>
-                                <mat-hint>Presione ENTER para agregar</mat-hint>
-                                <mat-error *ngIf="listResultFormControl.hasError('required')">
-                                    El campo es <strong>Requerido</strong>
-                                </mat-error>
-                            </mat-form-field>
-                        </mat-card-header>
-                        <mat-card-content class="container-expansion1__content-card-content">
-                            <div role="list" *ngFor="let result of listResultArray;let i=index">
-                                <div class="item-list">
-                                    <span>{{result.resultType}}</span>
+            <div style="display: flex; flex-wrap: wrap">
+                <div style="border: 10px;"></div>
+                <mat-card class="mat-elevation-z0">
+                    <mat-card-content>
+                        <mat-card class="mat-elevation-z0" style="margin-left: -10px;margin-top: 10px;">
+                            <mat-card-header>
+                                <mat-card-title>
                                     <span>
-                                        <button mat-icon-button aria-label="deletelistResult" (click)="addDeleteListResult('delete',i)">
-                                            <mat-icon style="color: #828282">delete</mat-icon>
-                                        </button>
+                                        Tipo de resultado
                                     </span>
+                                    <button type="button" aria-label="saveDataDifusion" mat-button
+                                        class="container-settings__btn-save" (click)="saveDataResult()">
+                                        GUARDAR
+                                    </button>
+                                </mat-card-title>
+                            </mat-card-header>
+                        </mat-card>
+                        <mat-card class="mat-elevation-z0 container-expansion1__content-card">
+                            <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+                            <mat-card-header class="container-expansion1__content-card--header">
+                                <mat-form-field>
+                                    <mat-label>Escribir</mat-label>
+                                    <input type="text" matInput placeholder="Escribir"
+                                        [formControl]="listResultFormControl" (keyup.enter)="addDeleteListResult('add')"
+                                        [errorStateMatcher]="matcher" autocomplete="off">
+                                    <button mat-button *ngIf="listResultFormControl.value" matSuffix mat-icon-button
+                                        aria-label="clearResult" (click)="listResultFormControl.reset()">
+                                        <mat-icon>close</mat-icon>
+                                    </button>
+                                    <mat-hint>Presione ENTER para agregar</mat-hint>
+                                    <mat-error *ngIf="listResultFormControl.hasError('required')">
+                                        El campo es <strong>Requerido</strong>
+                                    </mat-error>
+                                </mat-form-field>
+                            </mat-card-header>
+                            <mat-card-content class="container-expansion1__content-card-content">
+                                <div role="list" *ngFor="let result of listResultArray;let i=index">
+                                    <div class="item-list">
+                                        <span>{{result.resultType}}</span>
+                                        <span>
+                                            <button mat-icon-button aria-label="deletelistResult"
+                                                (click)="addDeleteListResult('delete',i)">
+                                                <mat-icon style="color: #828282">delete</mat-icon>
+                                            </button>
+                                        </span>
+                                    </div>
                                 </div>
-                            </div>
-                        </mat-card-content>
-                    </mat-card>                
-                </mat-card-content>
-            </mat-card>
+                            </mat-card-content>
+                        </mat-card>
+                    </mat-card-content>
+                </mat-card>
+
+                <mat-card class="mat-elevation-z0">
+                    <mat-card-content>
+                        <mat-card class="mat-elevation-z0" style="margin-left: -10px;margin-top: 10px;">
+                            <mat-card-header>
+                                <mat-card-title>
+                                    <span>
+                                        Tipo de ensayo
+                                    </span>
+                                    <button type="button" aria-label="saveDataDifusion" mat-button
+                                        class="container-settings__btn-save" (click)="saveKindOfTest()">
+                                        GUARDAR
+                                    </button>
+                                </mat-card-title>
+                            </mat-card-header>
+                        </mat-card>
+                        <mat-card class="mat-elevation-z0 container-expansion1__content-card">
+                            <mat-progress-bar mode="indeterminate" *ngIf="loadingKindOfTest$ | async"></mat-progress-bar>
+                            <mat-card-header class="container-expansion1__content-card--header">
+                                <mat-form-field>
+                                    <mat-label>Escribir</mat-label>
+                                    <input type="text" matInput placeholder="Escribir"
+                                        [formControl]="listKindOfTestFormControl" (keyup.enter)="addDeleteListKindOfTest('add')"
+                                        [errorStateMatcher]="matcher" autocomplete="off">
+                                    <button mat-button *ngIf="listKindOfTestFormControl.value" matSuffix mat-icon-button
+                                        aria-label="clearResult" (click)="listKindOfTestFormControl.reset()">
+                                        <mat-icon>close</mat-icon>
+                                    </button>
+                                    <mat-hint>Presione ENTER para agregar</mat-hint>
+                                    <mat-error *ngIf="listKindOfTestFormControl.hasError('required')">
+                                        El campo es <strong>Requerido</strong>
+                                    </mat-error>
+                                </mat-form-field>
+                            </mat-card-header>
+                            <mat-card-content class="container-expansion1__content-card-content">
+                                <div role="list" *ngFor="let result of listKindOfTestArray;let i=index">
+                                    <div class="item-list">
+                                        <span>{{result.kindOfTest}}</span>
+                                        <span>
+                                            <button mat-icon-button aria-label="deletelistResult"
+                                                (click)="addDeleteListKindOfTest('delete',i)">
+                                                <mat-icon style="color: #828282">delete</mat-icon>
+                                            </button>
+                                        </span>
+                                    </div>
+                                </div>
+                            </mat-card-content>
+                        </mat-card>
+                    </mat-card-content>
+                </mat-card>
+            </div>
+
         </mat-expansion-panel>
     </mat-accordion>
 </div>
