--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-upload-file-dialog/history-upload-file-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-upload-file-dialog/history-upload-file-dialog.component.html
@@ -7,13 +7,22 @@
     CREAR LOTE
   </h2>
   <mat-divider></mat-divider>
-  <mat-progress-bar mode="buffer" *ngIf="loading$ | async" [value]="uploading" [bufferValue]="uploading"></mat-progress-bar>
+  <mat-progress-bar mode="buffer" *ngIf="loading$ | async" [value]="uploading" [bufferValue]="uploading">
+  </mat-progress-bar>
 
   <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".xls,.xlsx"
     id="fileInput2">
-  <button aria-label="add" mat-button class="btn-add" accept=".xls,.xlsx" (click)="fileInput2.click()" [disabled]="loading$ | async">
+  <button aria-label="add" mat-button class="btn-add" accept=".xls,.xlsx" (click)="fileInput2.click()"
+    [disabled]="loading$ | async">
     <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
     SELECCIONE ARCHIVO
+  </button>
+  <input #fileInput3 style="display: none" type="file" (change)=" onFileSelected2($event)" accept=".xls,.xlsx"
+    id="fileInput3">
+  <button aria-label="add" mat-button class="btn-add" accept=".xls,.xlsx" (click)="fileInput3.click()"
+    [disabled]="loading$ | async">
+    <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
+    REESTABLECER DATA
   </button>
   <mat-dialog-content style="margin-top: 20px;">
     <ng-container *ngIf="settingDataSource.data.length; else default">
@@ -22,32 +31,38 @@
 
           <ng-container matColumnDef="otMain">
             <th mat-header-cell *matHeaderCellDef class="table__cell">MAIN</th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.otMain ? element.otMain : '---'}} </td>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.otMain ? element.otMain : '---'}}
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="otChild">
             <th mat-header-cell *matHeaderCellDef class="table__cell">CHILD</th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.otChild ? element.otChild : '---'}} </td>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.otChild ? element.otChild : '---'}}
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef class="table__cell">Posición</th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.position ? element.position : '---'}} </td>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.position ? element.position : '---'}}
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="partNumber">
             <th mat-header-cell *matHeaderCellDef class="table__cell">NP</th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.partNumber ? element.partNumber : '---'}} </td>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.partNumber ? element.partNumber :
+              '---'}} </td>
           </ng-container>
 
           <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef class="table__cell">Descripción</th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.description ? element.description : '---'}} </td>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.description ? element.description :
+              '---'}} </td>
           </ng-container>
 
           <ng-container matColumnDef="quantity">
             <th mat-header-cell *matHeaderCellDef class="table__cell">Cantidad</th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.quantity ? element.quantity : '---'}} </td>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.quantity ? element.quantity : '---'}}
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="internalStatus">
@@ -68,7 +83,8 @@
 
           <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef class="table__cell"> Atención </th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.status ? element.status : '---'}} </td>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.status ? element.status : '---'}}
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="createdBy">
@@ -89,19 +105,25 @@
 
           <ng-container matColumnDef="observations">
             <th mat-header-cell *matHeaderCellDef class="table__cell">Observaciones</th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.observations ? element.observations : '---'}} </td>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.observations ? element.observations :
+              '---'}} </td>
           </ng-container>
 
           <ng-container matColumnDef="workshop">
             <th mat-header-cell *matHeaderCellDef class="table__cell">Taller</th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.workshop ? element.workshop : '---'}} </td>
+            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.workshop ? element.workshop : '---'}}
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="createdAt">
             <th mat-header-cell *matHeaderCellDef class="table__cell">Fecha de solicitud</th>
-            <td mat-cell *matCellDef="let element" class="table__cell"><span
-                *ngIf="element.createdAt; else defaultcreatedAt">{{element.createdAt | date :
-                'dd/MM/yy hh:mm:ss'}}</span>
+            <td mat-cell *matCellDef="let element" class="table__cell">
+              <span *ngIf="element.createdAt; else defaultProcessAt">
+                <span *ngIf="element.createdAt.seconds">{{(element.createdAt.seconds*1000) | date :
+                  'dd/MM/yy hh:mm:ss'}}</span>
+                <span *ngIf="element.createdAt">{{element.createdAt | date :
+                  'dd/MM/yy hh:mm:ss'}}</span>
+              </span>
               <ng-template #defaultProcessAt>---</ng-template>
             </td>
           </ng-container>
@@ -133,17 +155,25 @@
           <ng-container matColumnDef="processAt">
             <th mat-header-cell *matHeaderCellDef class="table__cell">Fecha Proceso</th>
             <td mat-cell *matCellDef="let element" class="table__cell">
-              <span *ngIf="element.processAt; else defaultProcessAt">{{element.processAt | date :
-                'dd/MM/yy hh:mm:ss'}}</span>
+              <span *ngIf="element.processAt; else defaultProcessAt">
+                <span *ngIf="element.processAt.seconds">{{(element.processAt.seconds*1000) | date :
+                  'dd/MM/yy hh:mm:ss'}}</span>
+                <span *ngIf="element.processAt">{{element.processAt | date :
+                  'dd/MM/yy hh:mm:ss'}}</span>
+              </span>
               <ng-template #defaultProcessAt>---</ng-template>
             </td>
           </ng-container>
 
           <ng-container matColumnDef="finalizedAt">
             <th mat-header-cell *matHeaderCellDef class="table__cell">Fecha Cierre</th>
-            <td mat-cell *matCellDef="let element" class="table__cell"><span
-                *ngIf="element.finalizedAt; else defaultfinalizedAt">{{element.finalizedAt | date :
-                'dd/MM/yy hh:mm:ss'}}</span>
+            <td mat-cell *matCellDef="let element" class="table__cell">
+              <span *ngIf="element.finalizedAt; else defaultfinalizedAt">
+                <span *ngIf="element.finalizedAt.seconds">{{(element.finalizedAt.seconds*1000) | date :
+                  'dd/MM/yy hh:mm:ss'}}</span>
+                <span *ngIf="element.finalizedAt">{{element.finalizedAt | date :
+                  'dd/MM/yy hh:mm:ss'}}</span>
+              </span>
               <ng-template #defaultfinalizedAt>---</ng-template>
             </td>
           </ng-container>
