--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
@@ -46,7 +46,12 @@
                 </mat-form-field>
                 <mat-form-field appearance="outline" id="kindOfTest">
                     <mat-label>Tipo de ensayo</mat-label>
-                    <input matInput placeholder="Tipo de ensayo" formControlName="kindOfTest">
+                    <input matInput placeholder="Resultado" formControlName="kindOfTest" [matAutocomplete]="autoKindOfTest">
+                    <mat-autocomplete autoActiveFirstOption #autoKindOfTest="matAutocomplete">
+                        <mat-option *ngFor="let option of kindOfTests$ | async" [value]="option.kindOfTest">
+                            {{option.kindOfTest}}
+                        </mat-option>
+                    </mat-autocomplete>
                     <mat-error *ngIf="finalizeForm.controls['kindOfTest'].errors">
                         Campo <strong>requerido.</strong>
                     </mat-error>
@@ -64,7 +69,8 @@
             <div *ngFor="let imgUpload of imagesUpload;let i=index">
                 <label [for]="i">
                     <mat-card class="mat-elevation-z0">
-                        <img [src]="imgUpload" onError="this.src='../../../../../../../assets/img/camara.png'" class="pointer" />
+                        <img [src]="imgUpload" onError="this.src='../../../../../../../assets/img/camara.png'"
+                            class="pointer" />
                         <mat-card-actions *ngIf="imgUpload" align="end">
                             <button mat-icon-button (click)="deleteImage(imgForDelete, i)">
                                 <mat-icon color="warn">delete</mat-icon>
@@ -73,12 +79,15 @@
                     </mat-card>
                     <mat-divider></mat-divider>
                 </label>
-                <input [id]="i" type="file" style="display: none;" (change)="uploadFile($event,i)" accept="image/x-png, image/jpg, image/jpeg" />
+                <input [id]="i" type="file" style="display: none;" (change)="uploadFile($event,i)"
+                    accept="image/x-png, image/jpg, image/jpeg" />
             </div>
         </form>
     </mat-dialog-content>
     <mat-dialog-actions align="end">
-        <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close [disabled]="loading$ | async">CERRAR</button>
-        <button type="submit" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial (click)="onSubmit()" [disabled]="loading$ | async">GUARDAR</button>
+        <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close
+            [disabled]="loading$ | async">CERRAR</button>
+        <button type="submit" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial
+            (click)="onSubmit()" [disabled]="loading$ | async">GUARDAR</button>
     </mat-dialog-actions>
 </div>
