--- a/src/app/main/pages/andon/reports/reports.component.html
+++ b/src/app/main/pages/andon/reports/reports.component.html
@@ -15,7 +15,7 @@
             </form>
         </div>       
     </div>
-    <mat-divider></mat-divider>
+    <mat-divider class="divider" ></mat-divider>
     <div class="body-container" *ngIf="workShop$ | async as workShops">
       <div *ngFor="let item of workShops">
         <div class="cards"  >
@@ -53,7 +53,7 @@
                   {{item.atentionTime?.seconds | number : '2.'}}
                 </h3>
                 <button class="cards__body--supplies" >{{item.problemType}}</button>              
-                <button class="cards__body--return" (click)="returnDialog(item)">RETOMAR</button>       
+                <button mat-raised-button class="cards__body--return" (click)="returnDialog(item)">RETOMAR</button>       
             </div>
         </div>
       </div>       
