--- a/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.scss
+++ b/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.scss
@@ -39,10 +39,9 @@
 }
 
 .btn{
-    background: #6200EE;
-    color:white;
+    border: 1px solid #6200EE;
+    color: #6200EE;
     padding: 4px 40px 4px 40px;
-    border: none;
 }
 
 
