--- a/src/app/main/pages/andon/reports/reports.component.scss
+++ b/src/app/main/pages/andon/reports/reports.component.scss
@@ -102,7 +102,7 @@
 
 @media (min-width: 481px) and (max-width: 767px) {  
     .container {
-        margin: 30px 70px 30px 70px;
+        margin: 30px 30px 30px 30px;
     }
     
     .header-container {
@@ -115,12 +115,14 @@
         
         &__search{
             display: flex;
-            margin-left: 50px;
+            margin-left: 30px;
+            margin-right: 30px;
             border : 1px solid #D8D8D8;  
             &--input{
                 border: transparent;
                 height: 30px;
                 margin-bottom: 10px;
+                width: 50vw;
 
                 &::placeholder {
                     color: #aeaeae;
@@ -134,8 +136,8 @@
     
     .body-container{
         display: grid;
-        row-gap: 0.6em;
-        column-gap: 0.6em;
+        row-gap: 0.5em;
+        column-gap: 0.5em;
         grid-template-columns: 1fr 1fr; 
     
     }
@@ -223,6 +225,8 @@
                 border: transparent;
                 height: 20px;
                 margin-bottom: 10px;
+                width: 60vw;
+
                 &::placeholder {
                     color: #aeaeae;
                 }
@@ -271,7 +275,7 @@
                 height: 50px;
                 width: 50px;
                 border: 1px solid black;
-                margin: 10px 30px 10px 50px ;
+                margin: 10px 30px 10px 40px ;
             }
             &--timer{
                 font-weight: bold;
@@ -282,7 +286,7 @@
                 font-weight: bold;
                 color: black;
                 border-radius: 10px;
-                padding: 5px 20px 5px 20px;
+                padding: 10px 20px 10px 20px;
                 border: transparent;
                 margin-bottom: 15px;
             }
