add component upload images

--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-images-dialog/evaluations-images-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-images-dialog/evaluations-images-dialog.component.html
@@ -16,7 +16,7 @@
         <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
     </h2>
     <mat-dialog-content class="mat-typography">
-        <div *ngFor="let img of images;let i=index;">
+        <!-- <div *ngFor="let img of images;let i=index;">
             <a [href]="img" target="_blank" style="cursor: zoom-in">
                 <img [src]="img" *ngIf="img">
             </a>
@@ -36,6 +36,19 @@
             </label>
             <input [id]="i" type="file" style="display: none;" (change)="uploadFile($event,i)"
                 accept="image/x-png, image/jpg, image/jpeg" />
+        </div> -->
+        <div class="dropzone" appDropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)"
+            [class.hovering]="isHovering">
+
+
+            <h3>AngularFire Drop Zone</h3>
+            <p>Drag and Drop a File</p>
+        </div>
+
+        <h3>Uploads</h3>
+
+        <div *ngFor="let file of files">
+            <app-upload-task [file]="file"></app-upload-task>
         </div>
     </mat-dialog-content>
     <mat-dialog-actions align="end">
