add date in records

--- a/src/app/main/pages/andon/record/record.component.scss
+++ b/src/app/main/pages/andon/record/record.component.scss
@@ -124,7 +124,8 @@ table {
             display: flex;
         }
         &__date{
-            display: none;
+            width: 70vw;
+
         }
         
         &__search{
@@ -194,8 +195,10 @@ table {
         }
 
         &__date{
-            display: none;
+            width: 70vw;
+
         }
+
         
         &__search{
             display: flex;
